# mips_sim_v2

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  sim.rs
src/sim/: alu.rs  common.rs  controller.rs  instruction.rs  mem.rs  pipe_reg.rs  pipe_stage.rs  reg_file.rs  stalling.rs  traits.rs
tests/: benchmark.out  sim.rs
tests/assembly_tests/: .gitignore  Makefile  a.out  add.S  addi.S  addiu.S  and.S  andi.S  back_j.S  beq.S  bgez.S  bgtz.S  blez.S  bltz.S  bne.S  clo.S  clz.S  compile_to_rout.rs  delay_slot.S  div.S  divu.S  fib.S  get_entry.sh  hello  j.S  jal.S  jalr.S  jr.S  lb.S  lbu.S  lh.S  lhu.S  link.sh  lui.S  lw.S  memory_instructions_fixes  mtlo_mthi.S  mul.S  nor.S  or.S  (+19 more)
