[package]
name = "mips_sim"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
num = "^0.4.0"
num_enum = "0.5.4"
paste = "^1.0"
lazy_static = "^1.4.0"
wasm-bindgen= "^0.2"
wee_alloc = { version = "^0.4.5", optional = true}
js-sys = "0.3.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = {version = "0.1.6", optional = true}

[dev-dependencies]
paste = "^1.0"
wasm-bindgen-test = "^0.3"
web-sys={version="^0.3.57", features = ["XmlHttpRequest", "XmlHttpRequestEventTarget", "console"] }

[profile.release]
opt-level = "s"
